<resources>
    <string name="app_name">Loft Money Tracker</string>

    <string-array name="screen_array">
        <item>Траты</item>
        <item>Категории</item>
        <item>Статистика</item>
    </string-array>

    <string-array name="category">
        <item>Продукты</item>
        <item>Развления</item>
        <item>Другое</item>
    </string-array>

    <string name="action_example">Example action</string>
    <string name="add_the_category">Добавьте категорию</string>
    <string name="ok">ОК</string>
    <string name="CANCEL">ОТМЕНА</string>

    <string name="action_settings">Settings</string>
    <string name="transaction">Траты</string>
    <string name="category">Категории </string>
    <string name="statistic">Статистика</string>
    <string name="enter">Войти</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="add_trans">Добавьте трату</string>
    <string name="add_category">Введите категорию</string>
    <string name="hint_edittext_category">Одежда</string>
    <string name="label_transaction_name">Название:</string>
    <string name="hinteditTextName">Хлеб, зал, кофта и т.д.</string>
    <string name="label_transaction_sum">Cумма:</string>
    <string name="hint_edittextSum">500</string>
    <string name="card_name">Название</string>
    <string name="card_date">Дата</string>
    <string name="card_sum">Сумма</string>
</resources>
