<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogBox">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/DialogTitleText" />

        <TextView
            style="@style/DialogMainText"
            android:text="@string/label_transaction_name" />

        <EditText
            android:id="@+id/edittextName"
            style="@style/Edit"
            android:hint="@string/hinteditTextName" />

        <TextView
            style="@style/DialogMainText"
            android:text="@string/label_transaction_sum" />

        <EditText
            android:id="@+id/edittextSum"
            style="@style/Edit"
            android:hint="@string/hint_edittextSum" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            style="@style/DialogButtonCancel" />

        <Button
            android:id="@+id/okButton"
            style="@style/DialogButtonOk" />
    </RelativeLayout>
</LinearLayout>
