<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Container.Dark"
    android:padding="@dimen/padding_large">

    <Space style="@style/Space" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/android_app_logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_large">

        <EditText
            android:id="@+id/login"
            style="@style/Edit"
            android:hint="@string/login_hint" />

        <EditText
            android:id="@+id/password"
            style="@style/Edit"
            android:layout_marginTop="@dimen/padding_medium"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/enter"
        style="@style/Button"
        android:layout_margin="@dimen/padding_large"
        android:enabled="false"
        android:paddingLeft="@dimen/padding_xlarge"
        android:paddingRight="@dimen/padding_xlarge"
        android:text="@string/enter" />

    <Space style="@style/Space" />

</LinearLayout>